--- a/doc/开发日志.md
+++ b/doc/开发日志.md
@@ -25,8 +25,11 @@
 由于rpc是无状态的，对于目前采取云端模型调用而言，需要传输用户的api_key, 另外ai服务器那边也需要存档，即存储用户id、会话id，同时ai服务器后续可能需要提供历史记录、上下文记忆等功能，每次都发送这么长的信息不现实，另外也是为了功能解耦，将与ai服务有关的都迁移至另一台服务器上。故采用和用户初始登录一样的做法，用户调用初始配置申请后，ai服务器返回一个会话session_id,随后网页后端每次就只需要传输当前与ai服务器的会话ai即可完成对应的服务申请
 ![Alt text](image/image-5.png)
 
+
     对于单次远程调用，因为网页和后端之间是用websocket建立的长连接，故这里选用回调的方式，即另起一个协程同时创建回发消息的回调函数，等rpc远程调用结果返回时候执行此回调函数
 ![Alt text](image/image-7.png)
+
+![Alt text](image/image-11.png)
 
 ## 4. 关于协程和线程池的配合
 目前的想法就是，协程将任务提交至线程池，同时设置一个定时器(没有时间的那种，或者说是信号)，然后线程池要支持普通任务和带有回调的任务，有回调的时候执行完成的时候执行回调去恢复对应的协程，然后协程提交完之后就使用co_await去等待线程池的任务完成
