rpc客户端封装

--- a/doc/开发日志.md
+++ b/doc/开发日志.md
@@ -36,6 +36,46 @@
 <br>这里的这个恢复，由于我们是使用的boost协程，所以我们这里只能让boost来恢复，后续如果有时间的话可以抛弃boost自己写协程调度的话就可以自己控制什么时候恢复了，那个时候就不需要信号了
 ![Alt text](image/image-8.png)
 
+### 2025年5月3日更新
+这里的话，boost协程也是有对应的恢复方式，参考代码如下，[详见此处](../tools/rpc/test/general/boost_async_compose.cpp)
+```c++
+using boost::asio::this_coro::executor;
+
+template<typename Func>
+auto async_task(Func f, thread_pool& pool)
+  -> awaitable<typename std::invoke_result_t<Func>>
+{
+  using RetType = typename std::invoke_result_t<Func>;
+
+  // 1) 拿到当前协程的 executor
+  auto ex = co_await executor;
+
+  // 2) 挂起协程，在线程池执行 f，然后切回 ex 恢复
+  RetType result = co_await boost::asio::async_compose<
+      decltype(use_awaitable), void(RetType)>(
+    // initiation lambda，相当于 await_suspend()
+      [f = std::move(f), &pool, ex](auto& self) mutable {
+        // 提交到线程池
+        boost::asio::post(pool, [f = std::move(f), ex, self = std::move(self)]() mutable
+          {
+            RetType value{};
+       
+            value = f();  // 执行同步任务
+        
+            // 任务完成，切回原 executor 恢复协程
+            boost::asio::post(ex,
+                          [self = std::move(self), value = std::move(value)]() mutable {
+                            self.complete(std::move(value));
+                          });
+        });
+    },
+    use_awaitable
+    );
+
+    co_return result;
+}
+```
+
 ## 5. Redis连接池部分
 这里主要就是维护了一下最少支持的连接数量，同时设置定时器定时清理那些长时间未使用的连接(也许可以加一个LRU？这里没必要LRU，每个连接都是一样的)
 ![Alt text](image/image-9.png)
